# stm32f103c8_templates

./: CMakeLists.txt  Makefile  README.md
.cache/clangd/index/: core_cm3.c.C89261DA7BF341EF.idx  core_cm3.h.835ED2769A903046.idx  main.c.F827CA0332F0ADE6.idx  misc.c.F8E753F96240F55D.idx  misc.h.7E658B427A4F3FCB.idx  startup_stm32f10x_md.s.8E18DB1BEACB1BA0.idx  stm32f10x.h.ABED171A63A9DE88.idx  stm32f10x_adc.c.C61A5C1825F44750.idx  stm32f10x_adc.h.8C2849089BC0CD40.idx  stm32f10x_bkp.c.F43F0C3067702EB4.idx  stm32f10x_bkp.h.DE1505AC1DD4E0DF.idx  stm32f10x_can.c.0944AAA9B7E22576.idx  stm32f10x_can.h.01BEFE186AE64514.idx  stm32f10x_cec.c.8F3061CEFB453800.idx  stm32f10x_cec.h.35B4C4E8302F31B2.idx  stm32f10x_conf.h.5A788F9D3A53884C.idx  stm32f10x_crc.c.9DC7886ED98CE7A7.idx  stm32f10x_crc.h.1DF5264E9038E467.idx  stm32f10x_dac.c.C1F89B53666EF83E.idx  stm32f10x_dac.h.95CA5A38B3F8510C.idx  stm32f10x_dbgmcu.c.A75421F75AFB9BFB.idx  stm32f10x_dbgmcu.h.16F3E39C6DDB98FF.idx  stm32f10x_dma.c.5CDBD400FDA4BD2F.idx  stm32f10x_dma.h.00C594CBC47BF398.idx  stm32f10x_exti.c.F7968B96AE5F645B.idx  stm32f10x_exti.h.B77D6AB17876A664.idx  stm32f10x_flash.c.CCAA7C1BAA47F2A0.idx  stm32f10x_flash.h.EC8BD562690C2235.idx  stm32f10x_fsmc.c.EFF857456340A401.idx  stm32f10x_fsmc.h.8FE8445A2E73D238.idx  stm32f10x_gpio.c.836F83F4DDFDF8C9.idx  stm32f10x_gpio.h.6F1C537111737DF4.idx  stm32f10x_i2c.c.926D6688FF48C416.idx  stm32f10x_i2c.h.99F9F9F37D9B7B38.idx  stm32f10x_it.c.6EC8757DB6F798D7.idx  stm32f10x_it.h.6919F2E4EB3D709C.idx  stm32f10x_iwdg.c.F4FFF01E1D8AFC73.idx  stm32f10x_iwdg.h.5889F63A2CF69EA1.idx  stm32f10x_pwr.c.383E78A5DF5D8CE5.idx  stm32f10x_pwr.h.562958C1B32754E9.idx  (+16 more)
Libraries/CMSIS/CM3/CoreSupport/: core_cm3.c
User/: main.c
cmake/: toolchain.cmake
doc/: setup.md  usage.md
